@@ -20,6 +20,7 @@ HideusersPanel=false
 HideOtherPanels=false
 AskNicknameAtStartup=false
 DisableFileTransfer=false
+DisableSendMessage=false
 
 [Groups]
 TrustNickname=true
