@@ -83,9 +83,9 @@ void GuiVCard::setVCard( const User& u, VNumber chat_id, bool core_is_connected 
   QString user_version = "";
   if( u.version().isEmpty() )
     user_version = tr( "unknown" );
-  else if( u.version() < Settings::instance().version( false ) )
+  else if( u.version() < Settings::instance().version( false, false ) )
     user_version = tr( "old %1" ).arg( u.version() );
-  else if( u.version() > Settings::instance().version( false ) )
+  else if( u.version() > Settings::instance().version( false, false ) )
     user_version = tr( "new %1" ).arg( u.version() );
   else if( u.qtVersion() != Settings::instance().localUser().qtVersion() )
     user_version = QString( "v%1qt%2" ).arg( u.version(), u.qtVersion() );
